--- a/style.css
+++ b/style.css
@@ -1,8 +1,46 @@
+/*ANCHOR - class selectors */
+
 .bg-sucess-emphasis {
+  background-color: #6a9c81;
+}
+
+.h1-buttons {
+  border: 0px;
+  background-color: #6a9c81;
+  color: white;
+
+}
+
+.card {
   background-color: #6a9c81;
 }
 
 .header-buttons {
   border: 0px;
   background-color: #6a9c81;
+  color: white;
+  margin: 0 5px 0 5px;
 }
+
+
+/*ANCHOR - element selectors */
+
+
+h1 {
+  color: white;
+
+}
+
+h2 {
+  color: black;
+}
+
+p {
+  color: white;
+}
+
+.card {
+  color: white;
+}
+
+div .card {}
